[package]
name = "stdweb"
version = "0.4.15"
authors = ["Jan Bujak <j@exia.io>"]
repository = "https://github.com/koute/stdweb"
homepage = "https://github.com/koute/stdweb"
documentation = "https://docs.rs/stdweb/*/stdweb/"
license = "MIT/Apache-2.0"
readme = "README.md"
keywords = ["web", "asmjs", "webasm", "javascript"]
categories = ["api-bindings", "gui", "web-programming"]
description = "A standard library for the client-side Web"

build = "build.rs"

[dependencies]
discard = "1.0.3"
serde = { version = "1", optional = true }
serde_json = { version = "1", optional = true }
futures-core-preview = { version = "0.3.0-alpha.13", optional = true }
futures-channel-preview = { version = "0.3.0-alpha.13", optional = true }
futures-util-preview = { version = "0.3.0-alpha.13", optional = true }
futures-executor-preview = { version = "0.3.0-alpha.13", optional = true }

stdweb-derive = { version = "= 0.5.1", path = "stdweb-derive" }
stdweb-internal-macros = { version = "= 0.2.6", path = "stdweb-internal-macros" }
stdweb-internal-runtime = { version = "0.1", path = "stdweb-internal-runtime" }

[target.'cfg(all(target_arch = "wasm32", target_vendor = "unknown", target_os = "unknown", not(cargo_web)))'.dependencies]
wasm-bindgen = { version = "0.2" }

[dev-dependencies]
serde_json = "1"
serde_derive = "1"

[build-dependencies]
rustc_version = "0.2"

[features]
default = ["serde", "serde_json"]
nightly = []
web_test = []
futures-support = ["futures-core-preview", "futures-channel-preview", "futures-util-preview", "futures-executor-preview"]
experimental_features_which_may_break_on_minor_version_bumps = ["futures-support"]
"docs-rs" = []

[package.metadata.docs.rs]
features = ["serde", "serde_json", "futures-support", "docs-rs"]
all-features = false
no-default-features = true
