[package]
name = "stdweb-derive"
version = "0.5.1"
authors = ["Jan Bujak <j@exia.io>"]
repository = "https://github.com/koute/stdweb"
homepage = "https://github.com/koute/stdweb"
documentation = "https://docs.rs/stdweb/*/stdweb/"
license = "MIT/Apache-2.0"
readme = "README.md"
keywords = ["web", "asmjs", "webasm", "javascript"]
categories = ["api-bindings", "gui", "web-programming"]
description = "Derive macros for the `stdweb` crate"

[lib]
proc-macro = true

[dependencies]
quote = "0.6"
serde = "1"
serde_derive = "1"
proc-macro2 = "0.4"

[dependencies.syn]
version = "0.15"
default-features = false
features = ["derive", "parsing", "printing"]
