[package]
name = "stdweb-derive"
version = "0.5.3"
authors = ["Jan Bujak <j@exia.io>"]
repository = "https://github.com/koute/stdweb"
homepage = "https://github.com/koute/stdweb"
documentation = "https://docs.rs/stdweb-derive/"
license = "MIT/Apache-2.0"
readme = "README.md"
keywords = ["web", "asmjs", "webasm", "javascript"]
categories = ["api-bindings", "gui", "web-programming"]
description = "Derive macros for the `stdweb` crate"

[lib]
proc-macro = true

[dependencies]
quote = "1"
serde = "1"
serde_derive = "1"
proc-macro2 = "1"

[dependencies.syn]
version = "1"
default-features = false
features = ["derive", "parsing", "printing"]
