[package]
name = "stdweb-internal-macros"
version = "0.1.0"
authors = ["Jan Bujak <j@exia.io>"]
repository = "https://github.com/koute/stdweb"
homepage = "https://github.com/koute/stdweb"
documentation = "https://docs.rs/stdweb/*/stdweb/"
license = "MIT/Apache-2.0"
readme = "README.md"
keywords = ["web", "asmjs", "webasm", "javascript"]
categories = ["api-bindings", "gui", "web-programming"]
description = "Internal procedural macros for the `stdweb` crate"

[lib]
proc-macro = true

[dependencies]
quote = "0.6"
base-x = "0.2"
serde = "1"
serde_derive = "1"
serde_json = "1"
proc-macro2 = "0.4"

[dependencies.syn]
version = "0.14"
default-features = false
features = ["full", "parsing", "printing", "clone-impls"]
