[package]
name = "stdweb-internal-test-macro"
version = "0.1.1"
authors = ["Jan Bujak <j@exia.io>"]
repository = "https://github.com/koute/stdweb"
homepage = "https://github.com/koute/stdweb"
documentation = "https://docs.rs/stdweb/*/stdweb/"
license = "MIT OR Apache-2.0"
description = "Internal crate of the `stdweb` crate"

[lib]
proc-macro = true

[dependencies]
quote = "1"
proc-macro2 = "1"
